--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23",
     "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
