--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.11",
     "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
