--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dompurify": "^3.1.6",
+    "eslint-plugin-risxss": "^2.1.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
