--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "dompurify": "^3.1.6",
     "eslint-plugin-risxss": "^2.1.0",
@@ -16,6 +17,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
