--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^3.1.6",
     "eslint-plugin-risxss": "^2.1.0",
     "js-cookie": "^3.0.5",
+    "ldrs": "^1.0.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
