--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dompurify": "^3.1.6",
     "eslint-plugin-risxss": "^2.1.0",
+    "framer-motion": "^11.3.27",
     "js-cookie": "^3.0.5",
     "ldrs": "^1.0.2",
+    "lucide-react": "^0.427.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
@@ -29,7 +34,9 @@
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
-    "sweetalert2": "^11.12.2"
+    "sweetalert2": "^11.12.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
