--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tabler/icons-react": "^3.12.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.1.6",
     "eslint-plugin-risxss": "^2.1.0",
-    "framer-motion": "^11.3.27",
+    "framer-motion": "^11.3.30",
     "js-cookie": "^3.0.5",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.427.0",
