--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "devDependencies": {
     "postcss": "^8",
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard": "^36.0.1",
     "tailwindcss": "^3.4.1"
   }
 }
